# vedyut

./: .dockerignore  .gitignore  COMPLETE_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_READY.md  LICENSE  MANUAL_PUBLISH.ps1  README.md  VEDYUT_COMPLETE.md  pyproject.toml  railway.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: LLM_INTEGRATION.md
docs/python/vedyut/: index.html
docs/python/vedyut/api/: index.html  main.html
docs/python/vedyut/llm/: client.html  index.html  rag.html  tasks.html
examples/: llm_grammar_assistant.py
python/vedyut/: __init__.py
python/vedyut/api/: __init__.py  main.py
python/vedyut/llm/: __init__.py  client.py  rag.py  tasks.py
rust/: Cargo.toml
rust/vedyut-cheda/: Cargo.toml
rust/vedyut-cheda/src/: analyzer.rs  lib.rs  segmenter.rs
rust/vedyut-core/: Cargo.toml
rust/vedyut-core/src/: lib.rs
rust/vedyut-kosha/: Cargo.toml
rust/vedyut-kosha/src/: entries.rs  lexicon.rs  lib.rs
rust/vedyut-lipi/: Cargo.toml
rust/vedyut-lipi/src/: lib.rs  mappings.rs  schemes.rs  transliterate.rs
rust/vedyut-prakriya/: Cargo.toml
rust/vedyut-prakriya/src/: ac_sandhi.rs  dhatu.rs  generator.rs  hal_sandhi.rs  lakara.rs  lib.rs  prakriya.rs  rule.rs  samjna.rs  subanta.rs  tag.rs  term.rs  tests_samjna.rs  tests_sandhi.rs  tinanta.rs
rust/vedyut-sandhi/: Cargo.toml
rust/vedyut-sandhi/src/: lib.rs  rules.rs  splitter.rs
rust/vedyut-sanskritify/: Cargo.toml  README.md
rust/vedyut-sanskritify/src/: lib.rs  llm_fallback.rs  options.rs  refiner.rs  vocabulary.rs
scripts/: build-python.sh  publish-crates.sh
tests/: test_api.py
