[package]
name = "vedyut-cheda"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Sanskrit text segmentation and morphological analysis"

[dependencies]
vedyut-lipi = { path = "../vedyut-lipi", version = "0.1.0" }
vedyut-sandhi = { path = "../vedyut-sandhi", version = "0.1.0" }
vedyut-kosha = { path = "../vedyut-kosha", version = "0.1.0" }
serde = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
