[package]
name = "vedyut-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Main library combining all vedyut modules with Python bindings"

[lib]
name = "vedyut_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
vedyut-lipi = { path = "../vedyut-lipi", version = "0.1.0" }
vedyut-sandhi = { path = "../vedyut-sandhi", version = "0.1.0" }
vedyut-prakriya = { path = "../vedyut-prakriya", version = "0.1.0" }
vedyut-kosha = { path = "../vedyut-kosha", version = "0.1.0" }
vedyut-cheda = { path = "../vedyut-cheda", version = "0.1.0" }
vedyut-sanskritify = { path = "../vedyut-sanskritify", version = "0.1.0" }

# PyO3 for Python bindings
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
