[package]
name = "vedyut-kosha"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance lexicon for Sanskrit"

[dependencies]
vedyut-lipi = { path = "../vedyut-lipi" }
serde = { workspace = true }
serde_json = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
