[package]
name = "vedyut-sandhi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Sandhi rules application and splitting for Sanskrit"

[dependencies]
vedyut-lipi = { path = "../vedyut-lipi" }
serde = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
