[package]
name = "vedyut-sanskritify"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Make text in any Indian language more like refined Sanskrit"

[dependencies]
vedyut-lipi = { path = "../vedyut-lipi" }
vedyut-kosha = { path = "../vedyut-kosha" }
serde = { workspace = true }
serde_json = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
